--- a/LibrarySystem/frontend/src/main/resources/messages/messages.properties
+++ b/LibrarySystem/frontend/src/main/resources/messages/messages.properties
@@ -1,8 +1,9 @@
 pages.login.title=Login page
+pages.loginForm.title=Sign up to Library System
 pages.loginForm.username=User name
 pages.loginForm.password=Password
 pages.loginForm.submit=Sign In
-pages.login.errors.loginIsWrong=No such user
+pages.login.errors.loginIsWrong=No such user or password is incorrect
 pages.login.errors.loginIsEmpty=Login should be specified
 pages.login.errors.passwordIsEmpty=Password should be specified
 
@@ -28,7 +29,7 @@ pages.userManagement.addUser.add=Add user
 pages.userManagement.listUsers=List of users
 
 pages.userManagement.findUser=Find user
-pages.userManagement.findUser.allPagesAreEmpty=Error: All pages are empty
+pages.userManagement.findUser.allPagesAreEmpty=At least one criteria should be specified
 
 pages.userManagement.infoUser.title=Info about user: {0}
 pages.userManagement.infoUser.login=User login
@@ -46,12 +47,12 @@ pages.userManagement.updateUser.errors.passportNumber=Passport number should be 
 pages.userManagement.updateUser.errors.loginExists=Such login already exists
 pages.userManagement.updateUser.errors.passNumberExists=Such passport number already exists
 
-pages.userManagement.userFind.title=Find users
-pages.userManagement.userFind.firstName=FirstName
-pages.userManagement.userFind.lastName=LastName
-pages.userManagement.userFind.adress=Adress
-pages.userManagement.userFind.passport=Passport
-pages.userManagement.userFind.actions.find=Find
+pages.userManagement.userFind.title=Search users by
+pages.userManagement.userFind.firstName=Part of first name
+pages.userManagement.userFind.lastName=Part of last name
+pages.userManagement.userFind.address=Part of address
+pages.userManagement.userFind.passport=Part of passport number
+pages.userManagement.userFind.actions.find=Search
 
 pages.userManagement.userList.title=List of users
 pages.userManagement.userList.login=User login
@@ -61,7 +62,8 @@ pages.userManagement.userList.lastName=Last name
 pages.userManagement.userList.passportNumber=Passport number
 pages.userManagement.userList.address=User address
 pages.userManagement.userList.isActive=Activation status
-pages.userManagement.userList.infoUser=Info about user
+pages.userManagement.userList.actions.info=Info
+pages.userManagement.userList.noFound=No users found
 
 pages.roleManagement.addRole=Add role
 pages.roleManagement.addRole.title=Adding new role
@@ -84,7 +86,9 @@ pages.roleManagement.updateRole.title=Updating information about role
 pages.roleManagement.updateRole.back=Back to role information
 
 pages.roleManagement.findRole=Find role
-pages.roleManagement.findRole.title=Search role by part of
+pages.roleManagement.findRole.name=Part of role name
+pages.roleManagement.findRole.description=Part of role description
+pages.roleManagement.findRole.title=Search roles by
 pages.roleManagement.findRole.findRoles=Find roles
 pages.roleManagement.findRole.errors.emptyFields=At least one criteria should be specified
 
@@ -123,6 +127,9 @@ pages.libraryManagement.bookExemplar.libraryCode=Library code
 pages.libraryManagement.bookExemplar.isActive=Activated status
 pages.libraryManagement.bookExemplar.actions.update=Update book exemplar
 
+pages.libraryManagement.infoBookExemplar.title=Information about {0}:{1}:{2} book exemplar
+pages.libraryManagement.updateBookExemplar.actions.back=Back to book exemplar
+
 pages.libraryManagement.addBook=Add book
 pages.libraryManagement.addBook.back=Back to book exemplar
 pages.libraryManagement.addBook.save=Save book
@@ -148,9 +155,6 @@ pages.libraryManagement.addBook.addBookSerial=Select book serial
 pages.libraryManagement.addBook.addPublisher=Select publisher
 pages.libraryManagement.addBook.addAuthors=Select authors
 pages.libraryManagement.addBook.addGenres=Select genres
-
-pages.libraryManagement.listBooks=List of books
-pages.libraryManagement.findBook=Find book
 
 pages.libraryManagement.listAssigned=List of assigned book
 pages.libraryManagement.findAssigned=Find assigned book
@@ -179,6 +183,7 @@ pages.libraryManagement.infoBookType.additionalInfo.bookSerial.notFound=Book typ
 pages.libraryManagement.infoBookType.additionalInfo.publisher=Additional information about related publisher
 pages.libraryManagement.infoBookType.additionalInfo.authors=Additional information about related authors
 pages.libraryManagement.infoBookType.additionalInfo.genres=Additional information about related genres
+pages.libraryManagement.infoBookType.actions.update=Update book type
 
 pages.libraryManagement.addBookType=Add book type
 
@@ -187,7 +192,7 @@ pages.libraryManagement.listBookType.title=List of all book types
 pages.libraryManagement.listBookType.notFound=No book types found
 
 pages.libraryManagement.findBookType=Find book type
-pages.libraryManagement.findBookType.title=Search book type by
+pages.libraryManagement.findBookType.title=Search book types by
 pages.libraryManagement.findBookType.isbn=Part of ISBN
 pages.libraryManagement.findBookType.name=Part of name
 pages.libraryManagement.findBookType.description=Part of description
@@ -195,8 +200,9 @@ pages.libraryManagement.findBookType.actions.find=Search
 pages.libraryManagement.findBookType.errors.emptyFields=At least one criteria should be specified
 
 pages.libraryManagement.addBookType.title=Adding new book type
-pages.libraryManagement.addBookType.save=Save book type
-pages.libraryManagement.addBookType.back=Back to book type
+pages.libraryManagement.addBookType.actions.save=Save book type
+pages.libraryManagement.addBookType.actions.update=Update book type
+pages.libraryManagement.addBookType.actions.back=Back to book type
 pages.libraryManagement.addBookType.actions.addToBookType=Add to book type
 
 pages.libraryManagement.addAuthor=Add author
@@ -224,7 +230,7 @@ pages.libraryManagement.listAuthors.actions.delete=Delete
 pages.libraryManagement.listAuthors.actions.info=Info
 
 pages.libraryManagement.findAuthor=Find author
-pages.libraryManagement.findAuthor.title=Search author by
+pages.libraryManagement.findAuthor.title=Search authors by
 pages.libraryManagement.findAuthor.partOfFirstName=Part of first name
 pages.libraryManagement.findAuthor.partOfLastName=Part of last name
 pages.libraryManagement.findAuthor.actions.find=Search author
@@ -256,7 +262,7 @@ pages.libraryManagement.listGenres.actions.delete=Delete
 pages.libraryManagement.listGenres.actions.info=Info
 
 pages.libraryManagement.findGenre=Find genre
-pages.libraryManagement.findGenre.title=Search genre by
+pages.libraryManagement.findGenre.title=Search genres by
 pages.libraryManagement.findGenre.partOfName=Part of name
 pages.libraryManagement.findAuthor.partOfDescription=Part of description
 pages.libraryManagement.findGenre.actions.find=Search
@@ -305,6 +311,15 @@ pages.libraryManagement.listBookExemplar.actions.delete=Delete
 pages.libraryManagement.listBookExemplar.title=List of all book exemplars
 
 pages.libraryManagement.findBookExemplar=Find exemplar of book
+pages.libraryManagement.findBookExemplar.title=Search book exemplars by
+pages.libraryManagement.findBookExemplar.bookType.isbn=Part of ISBN
+pages.libraryManagement.findBookExemplar.libraryCode=Library code
+pages.libraryManagement.findBookExemplar.active=Activation status
+pages.libraryManagement.findBookExemplar.bookType.name=Part of book type name
+pages.libraryManagement.findBookExemplar.bookType.description=Part of book type description
+pages.libraryManagement.findBookExemplar.actions.find=Search
+pages.libraryManagement.findBookExemplar.errors.emptyFields=At least one criteria should be specified
+pages.libraryManagement.findBookExemplar.errors.libraryCodeIncorrectFormat=Invalid format of library code
 
 pages.libraryManagement.addBookSerial=Add book serial
 pages.libraryManagement.addBookSerial.title=Adding new book serial
@@ -330,7 +345,7 @@ pages.libraryManagement.listBookSerials.actions.delete=Delete
 pages.libraryManagement.listBookSerials.actions.apply=Apply to book type
 
 pages.libraryManagement.findBookSerial=Find book serial
-pages.libraryManagement.findBookSerial.title=Search book serial by
+pages.libraryManagement.findBookSerial.title=Search book serials by
 pages.libraryManagement.findBookSerial.partOfName=Part of name
 pages.libraryManagement.findBookSerial.partOfDescription=Part of description
 pages.libraryManagement.findBookSerial.actions.find=Search
