--- a/LibrarySystem/frontend/src/main/resources/messages/messages.properties
+++ b/LibrarySystem/frontend/src/main/resources/messages/messages.properties
@@ -9,6 +9,7 @@ pages.login.errors.passwordIsEmpty=Password should be specified
 
 pages.header.welcome=Welcome, {0}!
 pages.header.logout=Logout
+pages.footer.basedOn=Based on
 
 pages.standard.title=Library System
 pages.standard.top_menu.userManagement=User management
