--- a/LibrarySystem/frontend/src/main/resources/messages/messages.properties
+++ b/LibrarySystem/frontend/src/main/resources/messages/messages.properties
@@ -1,5 +1,5 @@
 pages.login.title=Login page
-pages.loginForm.title=Sign up to Library System
+pages.loginForm.title=Sign in to Library System
 pages.loginForm.username=User name
 pages.loginForm.password=Password
 pages.loginForm.submit=Sign In
@@ -41,7 +41,9 @@ pages.userManagement.infoUser.passportNumber=Passport number
 pages.userManagement.infoUser.address=User address
 pages.userManagement.infoUser.isActive=Activation status
 pages.userManagement.infoUser.update=Update user info
-
+pages.userManagement.infoUser.Roles=List of roles
+pages.userManagement.infoUser.Roles.delete=Remove role
+pages.userManagement.infoUser.Roles.addRole=Add Role
 pages.userManagement.updateUser.title=Updating information about user
 pages.userManagement.updateUser.back=Back to user information
 pages.userManagement.updateUser.errors.passportNumber=Passport number should be specified
@@ -65,6 +67,12 @@ pages.userManagement.userList.address=User address
 pages.userManagement.userList.isActive=Activation status
 pages.userManagement.userList.actions.info=Info
 pages.userManagement.userList.noFound=No users found
+
+pages.userManagement.addRoles.name=Role name
+pages.userManagement.addRoles.description=Description of role
+pages.userManagement.addRoles.actions.info=View info
+pages.userManagement.addRoles.actions.add=Add roles
+
 
 pages.roleManagement.addRole=Add role
 pages.roleManagement.addRole.title=Adding new role
