--- a/LibrarySystem/frontend/src/main/resources/messages/messages.properties
+++ b/LibrarySystem/frontend/src/main/resources/messages/messages.properties
@@ -365,5 +365,11 @@ pages.personManagement.listAssigned=List of assigned book
 pages.personManagement.findAssigned=Find assigned book
 
 pages.personManagement.settings=Personal settings
+pages.personManagement.settings.title=Settings
+pages.personManagement.settings.language=Select language
+pages.personManagement.settings.actions.update=Update settings
+pages.personManagement.settings.actions.back=Back to settings
+
+pages.personManagement.updateSettings.title=Updating settings
 
 pages.personManagement.infoUser=User information
